--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ div#box {
   border: 1px solid black;
   padding: 20px;
   margin: 1%;
+  height: 1000px;
   background-color: lightgray;
   position: relative;
 
