--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,30 @@
-h1 {
-    color: red;
+
+#header-nav {
+  background-color: darkred;
+  border-radius: 0;
+  border: 0;
 }
 
-div#box {
+.navbar-brand h1 {
+    color: seagreen;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+#collapsable-nav{
+  color: seagreen;
+  font-size: 1.2em;
+}
+
+div#item {
   box-sizing: border-box;
   border: 1px solid black;
   padding: 20px;
-  margin: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
   height: 1000px;
   background-color: lightgray;
   position: relative;
 
 }
+
